General clean-up of styles and resizing.
Change font, various css styles including drop-shadow for photo and back-ground colors.
Add media query and modify flex properties for different screen sizes.

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             </p>
             <button type="button">Sign Up</button>
         </div>
-        <!-- <div class="1-right-img"> -->
-        <img id="jihyo-img"
-            src="https://kpopping.com/documents/74/3/4000/230823-JYP-Naver-Post-TWICE-Jihyo-Zone-Jacket-Shoot-Behind-documents-3.jpeg?v=d6ddf"
-            alt="jihyo posing for her new album">
-        <!-- </div> -->
+        <div class="right-img-1">
+            <img id="jihyo-img"
+                src="https://kpopping.com/documents/74/3/4000/230823-JYP-Naver-Post-TWICE-Jihyo-Zone-Jacket-Shoot-Behind-documents-3.jpeg?v=d6ddf"
+                alt="jihyo posing for her new album">
+        </div>
     </div>
     <div class="main-block-2">
         <h2></h2>
