--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>Jihyo is the best leader and is considered by some to be a god. This page is dedicated to her and all of
                 the content she has blessed us with. Check it out.
             </p>
-            <button type="button">Sign Up</button>
+            <button class="button-block-1" type="button">Sign Up</button>
         </div>
         <div class="right-img-block-1">
             <img id="jihyo-img-block-1"
@@ -40,33 +40,41 @@
         </div>
     </div>
     <div class="main-block-2">
-            <h2>Jihyo in Action</h2>
-            <div class="jihyo-action-imgs-group">
+        <h2>Jihyo in Action</h2>
+        <div class="jihyo-action-imgs-group">
+            <div class="full-info-block-2">
                 <div class="jihyo-imgs-block-2">
                     <img class="square-img"
                         src="https://kpopping.com/documents/b3/5/1080/221220-TWICE-Jihyo-Instagram-Update-documents-1.jpeg?v=a6674"
                         alt="jihyo hanging out">
-                    <div class="text-block-2">Jihyo enjoying a tasty beverage.</div>
                 </div>
+                <div class="text-block-2">Jihyo enjoying a tasty beverage.</div>
+            </div>
+            <div class="full-info-block-2">
                 <div class="jihyo-imgs-block-2">
                     <img class="square-img"
                         src="https://kpopping.com/documents/01/0/1180/230827-TWICE-Twitter-Update-with-JIHYO-documents-1.jpeg?v=a88e2"
                         alt="jihyo after a performance">
-                        <div class="text-block-2">Jihyo celebrating her solo promotion.</div>
                 </div>
+                <div class="text-block-2">Jihyo celebrating her solo promotion.</div>
+            </div>
+            <div class="full-info-block-2">
                 <div class="jihyo-imgs-block-2">
                     <img class="square-img"
                         src="https://kpopping.com/documents/9e/3/1080/TWICE-Jihyo-x-Milk-Touch-%F0%9D%97%95%F0%9D%97%B2%F0%9D%98%80%F0%9D%98%81-%F0%9D%97%99%F0%9D%97%BF%F0%9D%97%B6%F0%9D%97%B2%F0%9D%97%BB%F0%9D%97%B1%F0%9D%98%80-%F0%9D%97%9B%F0%9D%97%BC%F0%9D%98%82%F0%9D%98%80%F0%9D%97%B2-%F0%9D%97%98%F0%9D%98%86%F0%9D%97%B2-%F0%9D%97%A3%F0%9D%97%AE%F0%9D%97%B9%F0%9D%97%B2%F0%9D%98%81%F0%9D%98%81%F0%9D%97%B2-documents-1.jpeg?v=d0bbf"
                         alt="jihyo drinking coffee">
-                        <div class="text-block-2">Jihyo sponsored for cosmetics.</div>
                 </div>
+                <div class="text-block-2">Jihyo sponsored for cosmetics.</div>
+            </div>
+            <div class="full-info-block-2">
                 <div class="jihyo-imgs-block-2">
                     <img class="square-img"
                         src="https://kpopping.com/documents/cf/4/1440/220710-TWICE-Tzuyu-Instagram-Update-with-Jihyo-documents-1.jpeg?v=01416"
                         alt="jihyo with teammate Tzuyu">
-                        <div class="text-block-2">Jihyo with Queen Tzuyu. Mommy Sarangae.</div>
                 </div>
+                <div class="text-block-2">Jihyo with Queen Tzuyu.<span>Mommy Sarangae.</span></div>
             </div>
+        </div>
     </div>
     <div class="main-block-3"></div>
     <div class="main-block-4"></div>
