add third main block and add more styling.
add quote and styling to the third main block, add drop-shadow effect to photos in second main block.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             </div>
         </div>
     </div>
-    <div class="main-block-3"></div>
+    <div class="main-block-3">
+        <p>"Chasing your dreams can be hard, but even though it may be tough, please don’t lose sight of what you want and continue to do your best at that."</p>
+    </div>
     <div class="main-block-4"></div>
 </body>
 
