Complete the fourth main block and complete styles
Create a sign-up box with proper styles and sizing using flexbox, fix the navbar to the top and add opacity.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Jihyo Tribute Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -77,9 +77,23 @@
         </div>
     </div>
     <div class="main-block-3">
-        <p>"Chasing your dreams can be hard, but even though it may be tough, please don’t lose sight of what you want and continue to do your best at that."</p>
+        <div class="full-quote-info">
+            <p class="quote-text">"Chasing your dreams can be hard, but even though it may be tough, please don’t lose
+                sight of what you want and continue to do your best at that."</p>
+            <p class="quoter">-- Jihyo Park</p>
+        </div>
     </div>
-    <div class="main-block-4"></div>
+    <div class="main-block-4">
+        <div class="sign-up-box">
+            <div class="sign-up-text">
+                <div class="sign-up-header">Stay updated with all things Jihyo!</div>
+                <div class="sign-up-caption">Sign up for e-mail alerts by clicking the button!</div>
+            </div>
+            <div class="sign-up-button">
+                <button type="button">Sign up</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
