Add links to photos in the second main block.
Add YouTube links for fun to the photos in the second main block.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Jihyo Tribute Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -43,36 +44,44 @@
         <h2>Jihyo in Action</h2>
         <div class="jihyo-action-imgs-group">
             <div class="full-info-block-2">
-                <div class="jihyo-imgs-block-2">
-                    <img class="square-img"
-                        src="https://kpopping.com/documents/b3/5/1080/221220-TWICE-Jihyo-Instagram-Update-documents-1.jpeg?v=a6674"
-                        alt="jihyo hanging out">
-                </div>
+                <a href="https://www.youtube.com/watch?v=bwgcloZNwtE&t=363s" target="_blank">
+                    <div class="jihyo-imgs-block-2">
+                        <img class="square-img"
+                            src="https://kpopping.com/documents/b3/5/1080/221220-TWICE-Jihyo-Instagram-Update-documents-1.jpeg?v=a6674"
+                            alt="jihyo hanging out">
+                    </div>
+                </a>
                 <div class="text-block-2">Jihyo enjoying a tasty beverage.</div>
             </div>
             <div class="full-info-block-2">
-                <div class="jihyo-imgs-block-2">
-                    <img class="square-img"
-                        src="https://kpopping.com/documents/01/0/1180/230827-TWICE-Twitter-Update-with-JIHYO-documents-1.jpeg?v=a88e2"
-                        alt="jihyo after a performance">
-                </div>
+                <a href="https://www.youtube.com/watch?v=2BRUkmFGdWM" target="_blank">
+                    <div class="jihyo-imgs-block-2">
+                        <img class="square-img"
+                            src="https://kpopping.com/documents/01/0/1180/230827-TWICE-Twitter-Update-with-JIHYO-documents-1.jpeg?v=a88e2"
+                            alt="jihyo after a performance">
+                    </div>
+                </a>
                 <div class="text-block-2">Jihyo celebrating her solo promotion.</div>
             </div>
             <div class="full-info-block-2">
-                <div class="jihyo-imgs-block-2">
-                    <img class="square-img"
-                        src="https://kpopping.com/documents/9e/3/1080/TWICE-Jihyo-x-Milk-Touch-%F0%9D%97%95%F0%9D%97%B2%F0%9D%98%80%F0%9D%98%81-%F0%9D%97%99%F0%9D%97%BF%F0%9D%97%B6%F0%9D%97%B2%F0%9D%97%BB%F0%9D%97%B1%F0%9D%98%80-%F0%9D%97%9B%F0%9D%97%BC%F0%9D%98%82%F0%9D%98%80%F0%9D%97%B2-%F0%9D%97%98%F0%9D%98%86%F0%9D%97%B2-%F0%9D%97%A3%F0%9D%97%AE%F0%9D%97%B9%F0%9D%97%B2%F0%9D%98%81%F0%9D%98%81%F0%9D%97%B2-documents-1.jpeg?v=d0bbf"
-                        alt="jihyo drinking coffee">
-                </div>
+                <a href="https://www.youtube.com/watch?v=ueaGjpweu38" target="_blank">
+                    <div class="jihyo-imgs-block-2">
+                        <img class="square-img"
+                            src="https://kpopping.com/documents/9e/3/1080/TWICE-Jihyo-x-Milk-Touch-%F0%9D%97%95%F0%9D%97%B2%F0%9D%98%80%F0%9D%98%81-%F0%9D%97%99%F0%9D%97%BF%F0%9D%97%B6%F0%9D%97%B2%F0%9D%97%BB%F0%9D%97%B1%F0%9D%98%80-%F0%9D%97%9B%F0%9D%97%BC%F0%9D%98%82%F0%9D%98%80%F0%9D%97%B2-%F0%9D%97%98%F0%9D%98%86%F0%9D%97%B2-%F0%9D%97%A3%F0%9D%97%AE%F0%9D%97%B9%F0%9D%97%B2%F0%9D%98%81%F0%9D%98%81%F0%9D%97%B2-documents-1.jpeg?v=d0bbf"
+                            alt="jihyo drinking coffee">
+                    </div>
+                </a>
                 <div class="text-block-2">Jihyo sponsored for cosmetics.</div>
             </div>
             <div class="full-info-block-2">
+                <a href="https://www.youtube.com/watch?v=M08eg0YrpVY" target="_blank">
                 <div class="jihyo-imgs-block-2">
                     <img class="square-img"
                         src="https://kpopping.com/documents/cf/4/1440/220710-TWICE-Tzuyu-Instagram-Update-with-Jihyo-documents-1.jpeg?v=01416"
                         alt="jihyo with teammate Tzuyu">
                 </div>
-                <div class="text-block-2">Jihyo with Queen Tzuyu.<span>Mommy Sarangae.</span></div>
+                </a>
+                <div class="text-block-2">Jihyo with Tzuyu.<span>Mommy Saranghae.</span></div>
             </div>
         </div>
     </div>
